<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lenta"
            android:icon="@drawable/ic_home_white_24dp"
            android:title="@string/main" />
        <item
            android:id="@+id/nav_catalog"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/catalog" />
        <item
            android:id="@+id/nav_discount"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/discounts" />
        <item
            android:id="@+id/nav_collections"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/collections" />
        <item
            android:id="@+id/nav_public"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/mpublic" />
    </group>

    <!--<item android:discountGoodName=""-->
    <!--android:id="@+id/sub_item">-->
    <!--<menu>-->
    <!--<item-->
    <!--android:id="@+id/nav_send"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:discountGoodName="@string/my_orders" />-->
    <!--<item-->
    <!--android:id="@+id/nav_payments"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:discountGoodName="@string/my_payments"/>-->
    <!--<item-->
    <!--android:id="@+id/nav_mail_forwarding"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:discountGoodName="@string/mail_forwarding"/>-->
    <!--<item-->
    <!--android:id="@+id/nav_partner_program"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:discountGoodName="@string/partnerProgram"/>-->
    <!--<item-->
    <!--android:id="@+id/nav_my_group_shopings"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:discountGoodName="Мои групповые покупки"/>-->
    <!--<item-->
    <!--android:id="@+id/nav_my_collections"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:discountGoodName="Мои коллекции"/>-->
    <!--<item-->
    <!--android:id="@+id/nav_user_details"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:discountGoodName="@string/user_details"/>-->
    <!--<item-->
    <!--android:id="@+id/nav_security"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:discountGoodName="@string/security"/>-->
    <!--<item-->
    <!--android:id="@+id/nav_mail_settings"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:discountGoodName="@string/user_settings"/>-->
    <!--<item-->
    <!--android:id="@+id/nav_logout"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:discountGoodName="@string/exit"/>-->
    <!--</menu>-->
    <!--</item>-->

</menu>
