<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/rekvizity_urumchi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rekvizity"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_rekvizity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rekvizity_urumchi"
            android:layout_marginTop="10dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/example_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_rekvizity"
            android:layout_marginTop="15dp"
            android:text="@string/user_example"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Trek_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/example_user"
            android:layout_marginTop="15dp"
            android:text="@string/trek_nomer"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_trek_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Trek_number"
            android:layout_marginTop="10dp"
            android:inputType="number"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/good_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_trek_number"
            android:layout_marginTop="15dp"
            android:text="@string/good_type"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_good_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/good_type"
            android:layout_marginTop="10dp" />

        <com.kg.vista.ooba.util.StaticGridView
            android:id="@+id/grvMailForwarding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_good_type"
            android:layout_marginTop="15dp" />

        <Button
            android:id="@+id/save_rekvizit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/grvMailForwarding"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/add_rekvizit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/save_rekvizit"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            app:srcCompat="@android:drawable/ic_menu_add" />
    </RelativeLayout>
</ScrollView>